renamed directory to avoid confusion and all the models files populated with codes including users.cs for the users to help authentication. database initial seeding has also been done in StateNationalPksdb.cs

--- a/StateNationalPks/appsettings.json
+++ b/StateNationalPks/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;database=park;uid=root;pwd=epicodus;"
+    "DefaultConnection": "Server=localhost;Port=3306;database=s_n_pks;uid=root;pwd=epicodus;"
   },
   "AppSettings": {
     "Secret": "thisisthelongsectretkeyandthatisrequired"
